21.nov (ws)
      - update session file after "save as"
      (db)
      - add handbook html, image, and font source files to SVN
20.nov  (ws)
        - fix import of capella whole measure rests
        (og)
        - exportly: tried to fix reported crash on file Cronicaz.mscz
        (la)
        - fix tiny text on windows if no printer installed
        - fix crash with drag and delete instrument name
        - fix rendering of dynamics (staff, part, system)
17.nov. (ws)
      - autosave: create dataPath if it does not exist
16.nov. (ws)
      - fix crash in autosave when autosave directory is not writable i.e. creating
        a temporary file failed; more work has to be done on this to notify the
        user about this condition
      (lv)
      - more work on MusicXML <metronome>
      (db)
      - change default foreground color to white
      - turn auto-save on for "factory settings"
      - better error message for SoundFont load failure
15.nov. (la)
      - fix "can't add dot to rest outside note entry"
      - fix bar line cut crash
      - forbid dots on full measure rest and avoid crash
      - enhance break plugin
14.nov. (ws)
      - delete barline reverts type to normal
13.nov. (ws)
      - right click does not change existing selection
      - fixed again: Measure repeat sign always on top when dragged from palette
      - do not disable sequencer and synthesizer, if soundfont cannot be loaded
      - show warning dialog, when soundfile loading failed
      - save dirty state in session file
      - show dialog, when a session file is found
12.nov. (lv)
      - export of MusicXML <metronome>
9.nov. (lv)
      - fix import of MusicXML <sound tempo="...">
       (ws)
      - fix: drum palette crashes program on non-drum parts
      - autosave on is now the default in preferences
      - new autosave implementation: save into temporary files, not into
        original files. This also works for the buildin demo file and new
        created scores.