@@ -249,6 +249,7 @@
         <type>quarter</type>
         <stem>up</stem>
         <notations>
+          <slur type="start" number="2"/>
           <articulations>
             <staccato/>
             </articulations>
@@ -264,6 +265,7 @@
         <type>quarter</type>
         <stem>up</stem>
         <notations>
+          <slur type="stop" number="2"/>
           <articulations>
             <accent/>
             <staccato/>
