@@ -1,3 +1,5 @@
+22.nov (lv)
+      - MusicXML export of arpeggio and glissando
 21.nov (ws)
       - update session file after "save as"
       (db)
